--- a/Win/WinData/RocketDockPortable/Data/settings/RocketDockPortableSettings.ini
+++ b/Win/WinData/RocketDockPortable/Data/settings/RocketDockPortableSettings.ini
@@ -1,5 +1,5 @@
 [RocketDockPortableSettings]
-LastDrive=F:
-LastDirectory=\Downloads\RocketDockPortable_1.3.5.paf
+LastDrive=C:
+LastDirectory=\Programs\Portable\RocketDockPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=F:
+PAL:LastPortableAppsBaseDir=C:\Programs
