--- a/Win/WinData/RocketDockPortable/Data/Settings.ini
+++ b/Win/WinData/RocketDockPortable/Data/Settings.ini
@@ -41,7 +41,7 @@ Offset=0
 vOffset=0
 OptionsTabIndex=5
 [Software\RocketDock\Icons]
-0-FileName=Icons\My Computer.png
+0-FileName=Icons\Folder.png
 0-FileName2=
 0-Title=내 PC
 0-Command=::{20D04FE0-3AEA-1069-A2D8-08002B30309D}
@@ -74,7 +74,7 @@ OptionsTabIndex=5
 2-IsSeparator=0
 2-UseContext=0
 2-DockletFile=
-3-FileName=C:\Users\ryuvsken\AppData\Local\Programs\MarkText\MarkText.exe?285410048
+3-FileName=C:\Users\ryuvsken\AppData\Local\Programs\MarkText\MarkText.exe
 3-FileName2=
 3-Title=MarkText
 3-Command=C:\Users\ryuvsken\AppData\Local\Programs\MarkText\MarkText.exe
@@ -151,149 +151,160 @@ OptionsTabIndex=5
 9-IsSeparator=0
 9-UseContext=0
 9-DockletFile=
-10-FileName=Defaults\DefaultIcons\Unknown.png
+10-FileName=C:\Program Files\WindowsApps\DBeaverCorp.DBeaverCE_24.3.0.0_x64__1b7tdvn0p0f9y\dbeaver.exe
 10-FileName2=
-10-Title=녹스 메니저
-10-Command=C:\Program Files\Nox\bin\MultiPlayerManager.exe
+10-Title=DBeaver CE
+10-Command=shell:AppsFolder\DBeaverCorp.DBeaverCE_1b7tdvn0p0f9y!DBeaver
 10-Arguments=
-10-WorkingDirectory=C:\Program Files\Nox\bin
+10-WorkingDirectory=<QUOTE>C:\Program Files\WindowsApps\DBeaverCorp.DBeaverCE_24.3.0.0_x64__1b7tdvn0p0f9y<QUOTE>
 10-ShowCmd=0
 10-OpenRunning=0
 10-IsSeparator=0
 10-UseContext=0
 10-DockletFile=
-11-FileName=Defaults\DefaultIcons\Unknown.png
+11-FileName=C:\Program Files\Nox\bin\MultiPlayerManager.exe
 11-FileName2=
-11-Title=LDPlayer
-11-Command=C:\Programs\ldmutiplayer\dnmultiplayerex.exe
+11-Title=녹스 메니저
+11-Command=C:\Program Files\Nox\bin\MultiPlayerManager.exe
 11-Arguments=
-11-WorkingDirectory=C:\Programs\ldmutiplayer
+11-WorkingDirectory=C:\Program Files\Nox\bin
 11-ShowCmd=0
 11-OpenRunning=0
 11-IsSeparator=0
 11-UseContext=0
 11-DockletFile=
-12-FileName=C:\Program Files\FileZilla FTP Client\filezilla.exe?140616776
+12-FileName=C:\Programs\ldmutiplayer\dnmultiplayerex.exe
 12-FileName2=
-12-Title=FileZilla
-12-Command=C:\Program Files\FileZilla FTP Client\filezilla.exe
+12-Title=LDPlayer
+12-Command=C:\Programs\ldmutiplayer\dnmultiplayerex.exe
 12-Arguments=
-12-WorkingDirectory=C:\Program Files\FileZilla FTP Client
+12-WorkingDirectory=C:\Programs\ldmutiplayer
 12-ShowCmd=0
 12-OpenRunning=0
 12-IsSeparator=0
 12-UseContext=0
 12-DockletFile=
-13-FileName=C:\Program Files (x86)\Steam\steam.exe?192718696
+13-FileName=C:\Program Files\FileZilla FTP Client\filezilla.exe?140616776
 13-FileName2=
-13-Title=Steam
-13-Command=C:\Program Files (x86)\Steam\steam.exe
+13-Title=FileZilla
+13-Command=C:\Program Files\FileZilla FTP Client\filezilla.exe
 13-Arguments=
-13-WorkingDirectory=C:\Program Files (x86)\Steam
+13-WorkingDirectory=C:\Program Files\FileZilla FTP Client
 13-ShowCmd=0
 13-OpenRunning=0
 13-IsSeparator=0
 13-UseContext=0
 13-DockletFile=
-14-FileName=C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win32\EpicGamesLauncher.exe
+14-FileName=C:\Program Files (x86)\Steam\steam.exe?192718696
 14-FileName2=
-14-Title=Epic Games Launcher
-14-Command=C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win32\EpicGamesLauncher.exe
+14-Title=Steam
+14-Command=C:\Program Files (x86)\Steam\steam.exe
 14-Arguments=
-14-WorkingDirectory=C:\Program Files (x86)\Epic Games\
+14-WorkingDirectory=C:\Program Files (x86)\Steam
 14-ShowCmd=0
 14-OpenRunning=0
 14-IsSeparator=0
 14-UseContext=0
 14-DockletFile=
-15-FileName=C:\Program Files\Unicorn Soft\Unicorn HTTPS\UnicornHTTPS.exe
+15-FileName=C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win32\EpicGamesLauncher.exe
 15-FileName2=
-15-Title=유니콘 HTTPS
-15-Command=C:\Program Files\Unicorn Soft\Unicorn HTTPS\UnicornHTTPS.exe
+15-Title=Epic Games Launcher
+15-Command=C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win32\EpicGamesLauncher.exe
 15-Arguments=
-15-WorkingDirectory=C:\Program Files\Unicorn Soft\Unicorn HTTPS
+15-WorkingDirectory=C:\Program Files (x86)\Epic Games\
 15-ShowCmd=0
 15-OpenRunning=0
 15-IsSeparator=0
 15-UseContext=0
 15-DockletFile=
-16-FileName=C:\Program Files (x86)\Kakao\KakaoTalk\KakaoTalk.exe?43137072
+16-FileName=C:\Program Files\Unicorn Soft\Unicorn HTTPS\UnicornHTTPS.exe
 16-FileName2=
-16-Title=카카오톡
-16-Command=C:\Program Files (x86)\Kakao\KakaoTalk\KakaoTalk.exe
+16-Title=유니콘 HTTPS
+16-Command=C:\Program Files\Unicorn Soft\Unicorn HTTPS\UnicornHTTPS.exe
 16-Arguments=
-16-WorkingDirectory=C:\Program Files (x86)\Kakao\KakaoTalk
+16-WorkingDirectory=C:\Program Files\Unicorn Soft\Unicorn HTTPS
 16-ShowCmd=0
 16-OpenRunning=0
 16-IsSeparator=0
 16-UseContext=0
 16-DockletFile=
-17-FileName=C:\Program Files\Google\Chrome\Application\chrome.exe
+17-FileName=C:\Program Files (x86)\Kakao\KakaoTalk\KakaoTalk.exe?43137072
 17-FileName2=
-17-Title=Google Chrome
-17-Command=C:\Program Files (x86)\Google\Chrome\Application\chrome.exe
+17-Title=카카오톡
+17-Command=C:\Program Files (x86)\Kakao\KakaoTalk\KakaoTalk.exe
 17-Arguments=
-17-WorkingDirectory=C:\Program Files\Google\Chrome\Application
+17-WorkingDirectory=C:\Program Files (x86)\Kakao\KakaoTalk
 17-ShowCmd=0
 17-OpenRunning=0
 17-IsSeparator=0
 17-UseContext=0
 17-DockletFile=
-18-FileName=C:\Program Files\OSFMount\OSFMount.exe?54118240
+18-FileName=C:\Program Files\Google\Chrome\Application\chrome.exe
 18-FileName2=
-18-Title=OSFMount
-18-Command=C:\Program Files\OSFMount\OSFMount.exe
+18-Title=Google Chrome
+18-Command=C:\Program Files (x86)\Google\Chrome\Application\chrome.exe
 18-Arguments=
-18-WorkingDirectory=C:\Program Files\OSFMount
+18-WorkingDirectory=C:\Program Files\Google\Chrome\Application
 18-ShowCmd=0
 18-OpenRunning=0
 18-IsSeparator=0
 18-UseContext=0
 18-DockletFile=
-19-FileName=Icons\Control Panel.png
+19-FileName=C:\Program Files\OSFMount\OSFMount.exe?54118240
 19-FileName2=
-19-Title=모든 제어판 항목
-19-Command=::{26EE0668-A00A-44D7-9371-BEB064C98683}\0
+19-Title=OSFMount
+19-Command=C:\Program Files\OSFMount\OSFMount.exe
 19-Arguments=
-19-WorkingDirectory=
+19-WorkingDirectory=C:\Program Files\OSFMount
 19-ShowCmd=0
 19-OpenRunning=0
 19-IsSeparator=0
 19-UseContext=0
 19-DockletFile=
-20-FileName=
+20-FileName=Icons\Control Panel.png
 20-FileName2=
-20-Title=
-20-Command=
+20-Title=모든 제어판 항목
+20-Command=::{26EE0668-A00A-44D7-9371-BEB064C98683}\0
 20-Arguments=
 20-WorkingDirectory=
 20-ShowCmd=0
 20-OpenRunning=0
-20-IsSeparator=1
+20-IsSeparator=0
 20-UseContext=0
 20-DockletFile=
-21-FileName=Icons\RocketDock Options.png
+21-FileName=
 21-FileName2=
-21-Title=Dock 설정
-21-Command=[Settings]
+21-Title=
+21-Command=
 21-Arguments=
 21-WorkingDirectory=
 21-ShowCmd=0
 21-OpenRunning=0
-21-IsSeparator=0
+21-IsSeparator=1
 21-UseContext=0
 21-DockletFile=
-22-FileName=Icons\Recycle Bin.png
-22-FileName2=Icons\Recycle Bin (full).png
-22-Title=휴지통
-22-Command=[RecycleBin]
+22-FileName=Icons\RocketDock Options.png
+22-FileName2=
+22-Title=Dock 설정
+22-Command=[Settings]
 22-Arguments=
 22-WorkingDirectory=
 22-ShowCmd=0
 22-OpenRunning=0
 22-IsSeparator=0
-22-UseContext=1
+22-UseContext=0
 22-DockletFile=
-count=23
+23-FileName=Icons\Recycle Bin.png
+23-FileName2=Icons\Recycle Bin (full).png
+23-Title=휴지통
+23-Command=[RecycleBin]
+23-Arguments=
+23-WorkingDirectory=
+23-ShowCmd=0
+23-OpenRunning=0
+23-IsSeparator=0
+23-UseContext=1
+23-DockletFile=
+count=24
 [Software\RocketDock\WindowFilters]
 count=0
